[package]
name = "rshelp"
version = "0.1.4"
edition = "2021"
authors = ["Hadi Cahyadi <cumulus13@gmail.com>"]
license = "MIT"
homepage = "https://github.com/cumulus13/rshelp"
repository = "https://github.com/cumulus13/rshelp"
description = "Rust enhanced help tool with beautiful terminal output"
keywords = ["help", "documentation", "cli", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.4", features = ["derive", "color"] }
clap-version-flag = "1.0.7"
make_colors = "1.0.1"
colored = "2.1.0"
anyhow = "1.0.86"
thiserror = "1.0.61"
regex = "1.10.5"
rustyline = "14.0.0"